LAST COMMIT (REALLY) - Fixed about CSS and login vertical align!

--- a/src/login/login.css
+++ b/src/login/login.css
@@ -35,7 +35,7 @@ h1 {
 }
 
 .modal-dialog {
-    padding-top: 26vh;
+    padding-top: 23vh;
 }
 
 .modal-content  {
